# functional

./: .bumpversion.toml  .gitmodules  README.md  VERSION.txt  build.sh  meson.build  pyproject.toml  write_git_info.py
.github/workflows/: bump-version.yml  bumpversion.yml  manual_bump.yml  release.yml  test.yml  wheels-debug.yml  wheels.yml
cpp/: functional.cpp  functional.h  threadlocalproxy.cpp  transformargs.cpp
src/: advice.cpp  always.cpp  andpredicate.cpp  anyargs.cpp  cache.cpp  callall.cpp  casepredicate.cpp  compose.cpp  compose2.cpp  constantly.cpp  deepwrap.cpp  dropargs.cpp  either.cpp  first.cpp  firstof.cpp  functional.cpp  functional.h  functional.py  ifthenelse.cpp  indexer.cpp  instancetest.cpp  intercept.cpp  manypredicate.cpp  memoize.cpp  methodinvoker.cpp  notpredicate.cpp  observer.cpp  orpredicate.cpp  param.cpp  partial.cpp  repeatedly.cpp  selfapply.cpp  sideeffect.cpp  spread.cpp  ternarypredicate.cpp  threadlocalproxy.cpp  transformapply.cpp  transformargs.cpp  transformcall.cpp  typepredicate.cpp  (+6 more)
src/retracesoftware/functional/: __init__.py  _pure.py
tests/: __init__.py  test_advanced.py  test_advice.py  test_args.py  test_compose.py  test_composition.py  test_memoize_cache.py  test_module_functions.py  test_partial.py  test_predicates.py  test_utilities.py  test_when.py
