[project]
name = "retracesoftware_functional"
version = "0.1.11"
description = "High-performance functional utilities implemented as a Python C/C++ extension"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [
    {name = "Retrace Software", email = "info@retracesoftware.com"}
]
maintainers = [
    {name = "Retrace Software", email = "info@retracesoftware.com"}
]
keywords = ["functional", "programming", "c-extension", "utilities", "performance"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.11"
dependencies = []

[project.urls]
Homepage = "https://github.com/retracesoftware/functional"
Repository = "https://github.com/retracesoftware/functional"
Documentation = "https://github.com/retracesoftware/functional"
"Bug Tracker" = "https://github.com/retracesoftware/functional/issues"

[build-system]
requires = ["meson-python>=0.15.0"]
build-backend = "mesonpy"