[project]
name = "retracesoftware_functional"
dynamic = ["version"]
# version = "0.1.17"
description = "High-performance functional utilities implemented as a Python C/C++ extension"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [
    {name = "Retrace Software", email = "info@retracesoftware.com"}
]
maintainers = [
    {name = "Retrace Software", email = "info@retracesoftware.com"}
]
keywords = ["functional", "programming", "c-extension", "utilities", "performance"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.11"
dependencies = []


# [tool.meson-python]
# # This tells meson-python to look at git tags
# version-tag-prefix = "functional-v"

# [tool.meson-python]
# # This tells meson-python to fetch the version from the tool
# version-command = ["versioningit"]

[tool.versioningit]
default-version = "0.0.0"

[tool.versioningit.vcs]
method = "git"
tag-prefix = "v"

# # 3. Optional: Write the version to a Python file so your extension or package can access it
# # Adjust the path below to where your source code actually lives
# write = { file = "src/version.py" }

# # The 'onbuild' section is the "glue" that helps backends like meson-python
# # It ensures the version is properly calculated during the build phase.
# onbuild = { method = "replace-version" }

[project.urls]
Homepage = "https://github.com/retracesoftware/functional"
Repository = "https://github.com/retracesoftware/functional"
Documentation = "https://github.com/retracesoftware/functional"
"Bug Tracker" = "https://github.com/retracesoftware/functional/issues"

[build-system]
requires = [
    "meson>=1.2",
    "meson-python>=0.18.0",
    "versioningit>=2.0",
]
build-backend = "mesonpy"