[project]
name = "retracesoftware-functional"
dynamic = ["version"]
# version = "0.1.17"
description = "High-performance functional utilities implemented as a Python C/C++ extension"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [
    {name = "Retrace Software", email = "info@retracesoftware.com"}
]
maintainers = [
    {name = "Retrace Software", email = "info@retracesoftware.com"}
]
keywords = ["functional", "programming", "c-extension", "utilities", "performance"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.11"
dependencies = []


[tool.meson-python]
# Version is sourced from VERSION.txt via meson.build

[project.urls]
Homepage = "https://github.com/retracesoftware/functional"
Repository = "https://github.com/retracesoftware/functional"
Documentation = "https://github.com/retracesoftware/functional"
"Bug Tracker" = "https://github.com/retracesoftware/functional/issues"

[build-system]
requires = [
    "meson>=1.2",
    "meson-python>=0.18.0",
    "setuptools_scm>=8.0.4",
]
build-backend = "mesonpy"